--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ margin: 0 auto;
 
 }
 
-.EduSection, .ExpSection {
+.EduSection, .ExpSection, .SkllSection{
   width: 100%;/*width percentage is space used in the current parent container */
   border: grey;
   border-style: solid; 
@@ -57,11 +57,11 @@ margin: 0 auto;
   justify-content: flex-start;    
 }
 
-.EduCards, .ExpCards{
+.EduCards, .ExpCards, .SkllCards{
   padding: 5px 5px 5px 5px; 
 }  
 
-.EduTitleHeader, .ExpTitleHeader{
+.EduTitleHeader, .ExpTitleHeader, .SkllTitleHeader{
 display:block;
 flex-wrap: nowrap;
 text-align: left;
@@ -69,7 +69,7 @@ padding-left: 5px;
 color: blue;
 }
 
-div.edCardItems, div.exCardItems {
+div.edCardItems, div.exCardItems , div.SkllCards{
 display: block;
 flex-wrap: nowrap;
 flex-direction: column;
@@ -98,6 +98,19 @@ margin-left: 5%;
 
 .exResponsibilities li{
   margin-left: 3.5%;
+  font-size: 0.7Rem;
+}
+
+.skllCardItems{
+text-align: left;
+margin: 0;
+}
+.skllLstItms{
+  text-align: left;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0;
+  margin-left: 5%;
   font-size: 0.7Rem;
 }
 
